add click event to button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    Here's some more information.
   </div>
 
-  <button >Open Modal</button>
+  <button @click.prevent="modal = true">Open Modal</button>
 
  </div>
 
