--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <div id="app" class="bg-blue-300 h-screen w-full flex justify-center items-center text-sm relative">
 
   <div v-if="modal" class="absolute top-0 w-full bg-green-200 text-center py-2">
-   Here's some more information.
+   Here's some more information. <button @click.prevent="modal = false">X</button>
   </div>
 
   <button @click.prevent="modal = true">Open Modal</button>
