toggle close and open string in modal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    Here's some more information. <button @click.prevent="modal = false">X</button>
   </div>
 
-  <button @click.prevent="modal = ! modal">Open Modal</button>
+  <button @click.prevent="modal = ! modal">{{ modal ? 'Close' : 'Open' }} Modal</button>
 
  </div>
 
